# products

./: README.md
backend/: .env  alembic.ini  database.py  enums.py  main.py  migrations.py  model.py  pyproject.toml  schema.py  settings.py
backend/alembic/: env.py
backend/alembic/versions/: 43928122e769_create_products_table.py  44f4c8696aac_add_img_col.py
frontend/: .env  package-lock.json  package.json
frontend/src/: App.tsx  index.css  types.ts
frontend/src/components/: CreateModal.tsx  EditModal.tsx  ProductCard.tsx
