[project]
package-mode = false
name = "backend"
version = "0.1.0"
description = ""
authors = [
    {name = "Roy Hernandez",email = "roy.hernandez@smsupermalls.com"}
]
requires-python = ">=3.12"
dependencies = [
    "alembic (>=1.17.1,<2.0.0)",
    "fastapi (>=0.121.2,<0.122.0)",
    "pydantic-settings (>=2.12.0,<3.0.0)",
    "python-dotenv (>=1.2.1,<2.0.0)",
    "sqlalchemy (>=2.0.44,<3.0.0)",
    "uvicorn (>=0.38.0,<0.39.0)",
    "python-multipart (>=0.0.20,<0.0.21)",
    "asyncpg (>=0.30.0,<0.31.0)",
    "greenlet (>=3.2.4,<4.0.0)",
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
